master

  * Added exception Temple::FilterError which should be thrown by filters
  * Added Temple::Parser as default base class for parsers
  * escape_html doesn't escape / anymore
  * HTML::AttributeSorter uses stable sorting now
  * HTML::AttributeRemover removed (Was too Slim specific)

0.4.1

  * Generators: produce optimized code
  * remove deprecated method EngineDSL#wildcard
  * Set tilt template default_mime_type to text/html
  * HTML: Support conditional comments [:html, :condcomment, ...]

0.4.0

  * Split Temple::HTML::AttributeMerger in AttributeSorter,
    AttributeMerger and AttributeRemover
  * Fix issue #58

0.3.5

  * Temple::HTML::Pretty improved
  * :sort_attrs option (default: true) added to HTML::AttributeMerger;
    if set to false, the attributes will appear in the insertion order
  * Temple::Mixins::EngineDSL api changed ("wildcard" is deprecated, use "use" instead)
  * Temple::Mixins::CompiledDispatcher supports arbitrary levels now
  * Don't use gsub! on incoming strings (#57)
  * Fix newlines in erb parser (#46)

0.3.4

  * Bugfix release (0.3.3 was yanked)

0.3.3

  * Support for rails 3.1 streaming
  * Add EngineDSL#wildcard
  * HTML::Fast/Pretty supports only :xhtml and :html formats from now on
  * HTML::AttributeMerger extracted from HTML::Fast

0.3.1, 0.3.2

  * Don't modify strings destructively with gsub! in HTML::Pretty.
    This doesn't work with Rails safe buffers in version >= 3.0.8.

0.3.0

  * Compiled expression dispatching
  * Method temple_dispatch is obsolete
  * EscapeHTML renamed to Escapable
  * Control flow filter added
  * HTML filter: Tag and attribute expressions changed
  * Expression grammar added
  * Expression validator added
  * Debugger filter removed (Validator is better replacement)

0.2.0

  * Add mutable/immutable hashes for option inheritance
  * Rails template support added
  * Rename Filter#compile to Filter#call
  * Engine chain reconfiguration (append, prepend, replace, ...)